--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -23,7 +23,7 @@
       <!--
       <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-search"></span></button>
       -->
-      <a href="/search" class="btn btn-success"><span class="glyphicon glyphicon-search"></span></a>
+      {{#link-to 'trips' class="btn btn-success"}}<span class="glyphicon glyphicon-search"></span>{{/link-to}}
     </form>
   </div>
   <hr>
