Use controller dependency to initialize search form

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,7 +3,7 @@
     <h1>fly cheap</h1>
     <p>Don&#39;t do this ---&gt;&#160;&#160; ╯‵Д′)╯彡┻━┻</p>
     <br>
-    {{render "search_form" sForm}}
+    {{render "search_form"}}
   </div>
   <hr>
 </div>
