--- a/app/templates/trips.hbs
+++ b/app/templates/trips.hbs
@@ -1,6 +1,6 @@
 <div class="flight-boxes">
   <ul class="flight-boxes-list">
-    {{#each view.trip itemController="trip"}}
+    {{#each view.trips itemController="trip"}}
     <li {{bind-attr class="isPromo:promo"}}>
     <div class="flight-box-header">
       {{airline}}
